--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -9,11 +9,12 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: 'Check out repository'
-        uses: 'actions/checkout@v2'
+        uses: 'actions/checkout@v4'
         with:
           fetch-depth: 0
       - name: 'Copy'
-        uses: 'pixta-dev/repository-mirroring-action@v1'
-        with:
-          target_repo_url: 'git@gitlab.com:tegebu/aubergine.git'
-          ssh_private_key: '${{ secrets.GITLAB_KEY }}'
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git remote add gitlab
+          git push --force --mirror gitlab https://oauth2:${{ secrets.GITLAB_KEY }}@gitlab.com/tegebu/aubergine.git
