--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
       - name: 'Copy'
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git remote add gitlab
-          git push --force --mirror gitlab https://oauth2:${{ secrets.GITLAB_KEY }}@gitlab.com/tegebu/aubergine.git
+          git config --global user.name "tegebu github actions"
+          git config --global user.email "actions@tegebu.com"
+          git remote add gitlab https://oauth2:${{ secrets.GITLAB_KEY }}@gitlab.com/tegebu/aubergine.git
+          git push --force --mirror gitlab
