--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -12,9 +12,15 @@ jobs:
         uses: 'actions/checkout@v4'
         with:
           fetch-depth: 0
+      - name: 'Set up SSH key'
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GITLAB_KEY }}" > ~/.ssh/gitlab
+          chmod 600 ~/.ssh/gitlab
+          ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
       - name: 'Copy'
         run: |
           git config --global user.name "tegebu github actions"
           git config --global user.email "actions@tegebu.com"
-          git remote add gitlab https://oauth2:${{ secrets.GITLAB_KEY }}@gitlab.com/tegebu/aubergine.git
+          git remote add gitlab git@gitlab.com:tegebu/aubergine.git
           git push --force --mirror gitlab
