--- a/.github/workflows/copy.yml
+++ b/.github/workflows/copy.yml
@@ -15,8 +15,8 @@ jobs:
       - name: 'Set up SSH key'
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.GITLAB_KEY }}" > ~/.ssh/gitlab
-          chmod 600 ~/.ssh/gitlab
+          echo "${{ secrets.GITLAB_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
       - name: 'Copy'
         run: |
